--- a/REUDataExploration2.Rmd
+++ b/REUDataExploration2.Rmd
@@ -20,57 +20,24 @@ knitr::opts_chunk$set(echo = TRUE)
 -First I will break the data set into smaller tables based on the author id
 
 ```{r, echo=FALSE}
-authors <- c(`1442272`, `840830`, `535`,`348705`,`790256`)
+#Note: had to change order of offsets so they matched up with the correct author_id, watch out for this!
+authorOffset <- c(-467, -226, -735, 0, 900) 
+#authorIds <- c(535, 348705, 790256, 840830, 1442272) - not necessary since we used indexes in the for loop
 
+#Splits large data frame up into smaller ones based on author_id
 splittingByAuthor <- split(data, data$author_id)
-author1 <- splittingByAuthor$`1442272`
-author2 <- splittingByAuthor$`840830`
-author3 <- splittingByAuthor$`535`
-author4 <- splittingByAuthor$`348705`
-author5 <- splittingByAuthor$`790256`
-View(author5)
-```
 
-### Adjusting for Time Zone
-- Now I will take the hour of work (HoW) for each person's commits and adjsut then using the mod equation based (provided by Chris) on their time zone
-- The mod equation is:  **localHoW** = (**HoW** + as.integer(*offset*/100) %% 168)
-- Note, even if the author has an offset of 0, we still create a localHoW variable for the sake of consistency in later code thats just equal to HoW
-```{r, echo= FALSE}
-
-for (authorid in authors) {
-  mutate(splittingByAuthor[[authorid]],localHoW = (HoW + as.integer(   **** put in the author's offset here *** /100)) %% 168)
+for(i in seq_along(authorOffset)){
+  #Adjusts HoW based of list of tz offsets (be careful about order of list!! make sure it matches order of data frames!)
+  splittingByAuthor[[i]] <- mutate(splittingByAuthor[[i]], localHoW = (HoW + as.integer(authorOffset[i]/100)) %% 168)
+  
+  #Creates HoD and o.h Variables for each author_id
+  splittingByAuthor[[i]] <- splittingByAuthor[[i]] %>% mutate(localO.h = ifelse(localHoW %in% 129:137, "1", ifelse(localHoW %in% 105:113, "1", ifelse(localHoW %in% 81:89, "1", ifelse(localHoW %in% 57:65, "1", ifelse(localHoW %in% 33:41, "1", "0")))))) %>% mutate(localHoD = ifelse(localHoW %in% 0:23, (localHoW %% 24) + 24, ifelse(localHoW %in% 144:167, local(HoW %% 24) + 24, localHoW %% 24))) 
 }
-#Author 1, offset = 900
-author1 <- mutate(author1, localHoW = (HoW + as.integer(900/100)) %% 168)
-#Author 2, offset = 0 (so localHoW = HoW)
-author2 <- mutate(author2, localHoW = HoW)
-#Author 3, offset = -467
-author3 <- mutate(author3, localHoW = (HoW + as.integer(-467/100)) %% 168)
-#Author 4, offset = -226
-author4 <- mutate(author4, localHoW = (HoW + as.integer(-226/100)) %% 168)
-#Author 5, offset = -735
-author5 <- mutate(author5, localHoW = (HoW + as.integer(-735/100)) %% 168)
+
 ```
 
-
-### Creating HoD and o.h Variables
-- For the sake of exploration, we will create an HoD variable for the local time zone.
-- We will also create the frequency count variable which we will use to aggregate frequiencies in later steps.
-
-```{r, echo= FALSE}
-#Author 1 (local):
-author1 <- author1 %>% mutate(localO.h = ifelse(localHoW %in% 129:137, "1", ifelse(localHoW %in% 105:113, "1", ifelse(localHoW %in% 81:89, "1", ifelse(localHoW %in% 57:65, "1", ifelse(localHoW %in% 33:41, "1", "0")))))) %>% mutate(localHoD = ifelse(localHoW %in% 0:23, (localHoW %% 24) + 24, ifelse(localHoW %in% 144:167, local(HoW %% 24) + 24, localHoW %% 24))) 
-#Author 2 (local):
-author2 <- author2 %>% mutate(localO.h = ifelse(localHoW %in% 129:137, "1", ifelse(localHoW %in% 105:113, "1", ifelse(localHoW %in% 81:89, "1", ifelse(localHoW %in% 57:65, "1", ifelse(localHoW %in% 33:41, "1", "0")))))) %>% mutate(localHoD = ifelse(localHoW %in% 0:23, (localHoW %% 24) + 24, ifelse(localHoW %in% 144:167, local(HoW %% 24) + 24, localHoW %% 24))) 
-#Author 3 (local):
-author3 <- author3 %>% mutate(localO.h = ifelse(localHoW %in% 129:137, "1", ifelse(localHoW %in% 105:113, "1", ifelse(localHoW %in% 81:89, "1", ifelse(localHoW %in% 57:65, "1", ifelse(localHoW %in% 33:41, "1", "0")))))) %>% mutate(localHoD = ifelse(localHoW %in% 0:23, (localHoW %% 24) + 24, ifelse(localHoW %in% 144:167, local(HoW %% 24) + 24, localHoW %% 24))) 
-#Author 4 (local):
-author4 <- author4 %>% mutate(localO.h = ifelse(localHoW %in% 129:137, "1", ifelse(localHoW %in% 105:113, "1", ifelse(localHoW %in% 81:89, "1", ifelse(localHoW %in% 57:65, "1", ifelse(localHoW %in% 33:41, "1", "0")))))) %>% mutate(localHoD = ifelse(localHoW %in% 0:23, (localHoW %% 24) + 24, ifelse(localHoW %in% 144:167, local(HoW %% 24) + 24, localHoW %% 24))) 
-#Author 5 (local):
-author5 <- author5 %>% mutate(localO.h = ifelse(localHoW %in% 129:137, "1", ifelse(localHoW %in% 105:113, "1", ifelse(localHoW %in% 81:89, "1", ifelse(localHoW %in% 57:65, "1", ifelse(localHoW %in% 33:41, "1", "0")))))) %>% mutate(localHoD = ifelse(localHoW %in% 0:23, (localHoW %% 24) + 24, ifelse(localHoW %in% 144:167, local(HoW %% 24) + 24, localHoW %% 24))) 
-```
-
-#Apache Hadoop Developer Working Hour Patterns
+#Function to Create Heat Map and Line Graph
 
 **Heat Map Description:**
 
@@ -82,7 +49,8 @@ author5 <- author5 %>% mutate(localO.h = ifelse(localHoW %in% 129:137, "1", ifel
 
 - First I created a new office hour variable (o.h), which will be used for grouping in line graph, 1 = office hours, 0 = non-office hours.  I considered office hours to be from 09:00 - 17:00.  However it should be noted potential time zone issues have not yet been addressed.  
 
-## Contributor 1: 
+- To see the graphs for an author, enter their identifier into the funtion 'create_both_graphs(authorInfo)'
+- ex. '>*create_both_graphs(splittingByAuthor[[1]])*'
 
 ```{r, echo=FALSE}
 #Funtion takes in an author and creates line line graph plotting office hours vs. non-office hours and longitudinal Heat Map of Working Hours for the author 
@@ -103,95 +71,4 @@ create_both_graphs <- function(authori) {
     # Creates longitudinal Heat Map of Working Hours:
     plot(ggplot(aib, aes(year, localHoD)) + geom_tile(aes(fill = freq), colour = "white") + scale_fill_gradient(low = "white", high = "steelblue") + scale_y_continuous(breaks=seq(0, 168, 2)))
 }
-```
-```{r}
-create_both_graphs(author1)
-create_both_graphs(author2)
-```
-
-
-
-## Contributor 2:
-```{r, echo=FALSE}
-# Aggregates frequencies and groups by o.h and year
-a2 <- author2 %>% mutate(freqYr = frequency(year)) %>% group_by(freqYr, year, localO.h) %>% summarise(freq = sum(freqYr)) %>% group_by(localO.h)
-
-# Changes o.h from continuous to discrete column 
-a2$localO.h <- as.factor(a2$localO.h)
-
-# Creates line graph plotting office hours vs. non-office hours
-ggplot(a2, aes(x = year, y = freq)) + geom_line(aes(colour= localO.h)) + labs(title = "Office Hour vs. Non-Office Hour Commits\n", x = "Year", y = "Number of Commits", color = "Time of Commit") +
-  scale_color_manual(labels = c("During Non-Office Hours", "During Office Hours"), values = c("blue", "red"))
-
-# Aggregates frequencies and groups by HoD
-a2b <- author2 %>% mutate(freqYr = frequency(year)) %>% group_by(freqYr, localHoD, year, localO.h) %>% summarise(freq = sum(freqYr)) %>% group_by(localO.h)
-
-# Creates longitudinal Heat Map of Working Hours:
-ggplot(a2b, aes(year, localHoD)) + geom_tile(aes(fill = freq), colour = "white") + scale_fill_gradient(low = "white", high = "steelblue") + scale_y_continuous(breaks=seq(0, 168, 2))
-```
-
-## Contributor 3:
-```{r, echo=FALSE}
-# Aggregates frequencies and groups by o.h and year
-a3 <- author3 %>% mutate(freqYr = frequency(year)) %>% group_by(freqYr, year, localO.h) %>% summarise(freq = sum(freqYr)) %>% group_by(localO.h)
-
-# Changes o.h from continuous to discrete column 
-a3$localO.h <- as.factor(a3$localO.h)
-
-# Creates line graph plotting office hours vs. non-office hours
-ggplot(a3, aes(x = year, y = freq)) + geom_line(aes(colour= localO.h)) + labs(title = "Office Hour vs. Non-Office Hour Commits\n", x = "Year", y = "Number of Commits", color = "Time of Commit") +
-  scale_color_manual(labels = c("During Non-Office Hours", "During Office Hours"), values = c("blue", "red"))
-
-# Aggregates frequencies and groups by HoD
-a3b <- author3 %>% mutate(freqYr = frequency(year)) %>% group_by(freqYr, localHoD, year, localO.h) %>% summarise(freq = sum(freqYr)) %>% group_by(localO.h)
-
-# Creates longitudinal Heat Map of Working Hours:
-ggplot(a3b, aes(year, localHoD)) + geom_tile(aes(fill = freq), colour = "white") + scale_fill_gradient(low = "white", high = "steelblue") + scale_y_continuous(breaks=seq(0, 168, 2))
-```
-
-## Contributor 4:
-```{r, echo=FALSE}
-# Aggregates frequencies and groups by o.h and year
-a4 <- author4 %>% mutate(freqYr = frequency(year)) %>% group_by(freqYr, year, localO.h) %>% summarise(freq = sum(freqYr)) %>% group_by(localO.h)
-
-# Changes o.h from continuous to discrete column 
-a4$localO.h <- as.factor(a4$localO.h)
-
-# Creates line graph plotting office hours vs. non-office hours
-ggplot(a4, aes(x = year, y = freq)) + geom_line(aes(colour= localO.h)) + labs(title = "Office Hour vs. Non-Office Hour Commits\n", x = "Year", y = "Number of Commits", color = "Time of Commit") +
-  scale_color_manual(labels = c("During Non-Office Hours", "During Office Hours"), values = c("blue", "red"))
-
-# Aggregates frequencies and groups by HoD
-a4b <- author4 %>% mutate(freqYr = frequency(year)) %>% group_by(freqYr, localHoD, year, localO.h) %>% summarise(freq = sum(freqYr)) %>% group_by(localO.h)
-
-# Creates longitudinal Heat Map of Working Hours:
-ggplot(a4b, aes(year, localHoD)) + geom_tile(aes(fill = freq), colour = "white") + scale_fill_gradient(low = "white", high = "steelblue") + scale_y_continuous(breaks=seq(0, 168, 2))
-```
-
-## Contributor 5:
-```{r, echo=FALSE}
-# Aggregates frequencies and groups by o.h and year
-a5 <- author5 %>% mutate(freqYr = frequency(year)) %>% group_by(freqYr, year, localO.h) %>% summarise(freq = sum(freqYr)) %>% group_by(localO.h)
-
-# Changes o.h from continuous to discrete column 
-a5$localO.h <- as.factor(a5$localO.h)
-
-# Creates line graph plotting office hours vs. non-office hours
-ggplot(a5, aes(x = year, y = freq)) + geom_line(aes(colour= localO.h)) + labs(title = "Office Hour vs. Non-Office Hour Commits\n", x = "Year", y = "Number of Commits", color = "Time of Commit") +
-  scale_color_manual(labels = c("During Non-Office Hours", "During Office Hours"), values = c("blue", "red"))
-
-# Aggregates frequencies and groups by HoD
-a5b <- author5 %>% mutate(freqYr = frequency(year)) %>% group_by(freqYr, localHoD, year, localO.h) %>% summarise(freq = sum(freqYr)) %>% group_by(localO.h)
-
-# Creates longitudinal Heat Map of Working Hours:
-ggplot(a5b, aes(year, localHoD)) + geom_tile(aes(fill = freq), colour = "white") + scale_fill_gradient(low = "white", high = "steelblue") + scale_y_continuous(breaks=seq(0, 168, 2))
-```
-
-```{r}
-
-a1c <- author1 %>% mutate(freqO.hCommits = frequency(localO.h)) %>% mutate(freqNonO.hCommits = frequency(localO.h)) 
-a1c <- a1c %>% group_by(localO.h, )
-
-View(a1c)
-
 ```
